[package]
edition = "2018"
name = "snd-firewire-ctl-services"
version = "0.1.0"
# For publishing.
authors = ["Takashi Sakamoto"]
description = """
Service programs to control audio and music unit on IEEE 1394 bus, supported by ALSA
"""
license = "GPL-3.0-or-later"

[dependencies]
libc = "0.2"
glib = "0.15"
alsactl = "0.4"
alsaseq = "0.4"
hinawa = "0.7"
hitaki = "0.2"
core = { path = "libs/core" }
dg00x-runtime = { path = "libs/dg00x/runtime" }
tascam-runtime = { path = "libs/tascam/runtime" }
efw-runtime = { path = "libs/efw/runtime" }
motu-runtime = { path = "libs/motu/runtime" }
oxfw-runtime = { path = "libs/oxfw/runtime" }
bebob-runtime = { path = "libs/bebob/runtime" }
dice-runtime = { path = "libs/dice/runtime" }
ff-runtime = { path = "libs/ff/runtime" }

[workspace]
members = [
    "libs/core",
    "libs/dg00x/runtime",
    "libs/tascam/runtime",
    "libs/efw/runtime",
    "libs/motu/runtime",
    "libs/oxfw/runtime",
    "libs/bebob/runtime",
    "libs/dice/runtime",
    "libs/ff/runtime",
# They are now available in crates.io.
#    "libs/alsa-ctl-tlv-codec",
#    "libs/ieee1212-config-rom",
    "libs/ta1394/general",
#    "libs/ta1394/audio",
#    "libs/ta1394/stream-format",
#    "libs/ta1394/ccm",
#    "libs/dg00x/protocols",
#    "libs/tascam/protocols",
#    "libs/efw/protocols",
#    "libs/motu/protocols",
#    "libs/oxfw/protocols",
#    "libs/bebob/protocols",
#    "libs/dice/protocols",
#    "libs/ff/protocols",
]

# For development purpose.
[patch.crates-io]
#alsa-ctl-tlv-codec = { path = "libs/alsa-ctl-tlv-codec" }
#ieee1212-config-rom = { path = "libs/ieee1212-config-rom" }
ta1394-avc-general = { path = "libs/ta1394/general" }
#ta1394-avc-audio = { path = "libs/ta1394/audio" }
#ta1394-avc-stream-format = { path = "libs/ta1394/stream-format" }
#ta1394-avc-ccm = { path = "libs/ta1394/ccm" }
#firewire-bebob-protocols = { path = "libs/bebob/protocols" }
#firewire-digi00x-protocols = { path = "libs/dg00x/protocols" }
#firewire-dice-protocols = { path = "libs/dice/protocols" }
#firewire-fireworks-protocols = { path = "libs/efw/protocols" }
#firewire-fireface-protocols = { path = "libs/ff/protocols" }
#firewire-motu-protocols = { path = "libs/motu/protocols" }
#firewire-oxfw-protocols = { path = "libs/oxfw/protocols" }
#firewire-tascam-protocols = { path = "libs/tascam/protocols" }
