[package]
edition = "2018"
name = "snd-firewire-ctl-services"
version = "0.1.0"
# For publishing.
authors = ["Takashi Sakamoto"]
description = """
Service programs to control audio and music unit on IEEE 1394 bus, supported by ALSA
"""
license = "GPL-3.0-or-later"

[dependencies]
libc = "0.2"
glib = "0.15"
alsactl = "0.4"
alsaseq = "0.4"
hinawa = "0.7"
hitaki = "0.2"
core = { path = "runtime/core" }
digi00x-runtime = { path = "runtime/digi00x" }
tascam-runtime = { path = "runtime/tascam" }
fireworks-runtime = { path = "runtime/fireworks" }
motu-runtime = { path = "runtime/motu" }
oxfw-runtime = { path = "runtime/oxfw" }
bebob-runtime = { path = "runtime/bebob" }
dice-runtime = { path = "runtime/dice" }
fireface-runtime = { path = "runtime/fireface" }

[workspace]
members = [
    "runtime/core",
    "runtime/digi00x",
    "runtime/tascam",
    "runtime/fireworks",
    "runtime/motu",
    "runtime/oxfw",
    "runtime/bebob",
    "runtime/dice",
    "runtime/fireface",
# They are now available in crates.io.
#    "protocols/alsa-ctl-tlv-codec",
#    "protocols/ieee1212-config-rom",
    "protocols/ta1394/general",
    "protocols/ta1394/audio",
    "protocols/ta1394/stream-format",
    "protocols/ta1394/ccm",
#    "protocols/digi00x",
#    "protocols/tascam",
#    "protocols/fireworks",
#    "protocols/motu",
    "protocols/oxfw",
    "protocols/bebob",
#    "protocols/dice",
#    "protocols/fireface",
]

# For development purpose.
[patch.crates-io]
#alsa-ctl-tlv-codec = { path = "protocols/alsa-ctl-tlv-codec" }
#ieee1212-config-rom = { path = "protocols/ieee1212-config-rom" }
ta1394-avc-general = { path = "protocols/ta1394/general" }
ta1394-avc-audio = { path = "protocols/ta1394/audio" }
ta1394-avc-stream-format = { path = "protocols/ta1394/stream-format" }
ta1394-avc-ccm = { path = "protocols/ta1394/ccm" }
firewire-bebob-protocols = { path = "protocols/bebob" }
#firewire-digi00x-protocols = { path = "protocols/digi00x" }
#firewire-dice-protocols = { path = "protocols/dice" }
#firewire-fireworks-protocols = { path = "protocols/fireworks" }
#firewire-fireface-protocols = { path = "protocols/fireface" }
#firewire-motu-protocols = { path = "protocols/motu" }
firewire-oxfw-protocols = { path = "protocols/oxfw" }
#firewire-tascam-protocols = { path = "protocols/tascam" }
