[package]
name = "snd-firewire-ctl-services"
version = "0.1.0"
authors = ["Takashi Sakamoto <o-takashi@sakamocchi.jp>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = """
Service programs to control audio and music unit on IEEE 1394 bus, supported by ALSA
"""

[dependencies]
libc = "0.2"
dg00x = { path = "../libs/dg00x" }
tascam = { path = "../libs/tascam" }
efw = { path = "../libs/efw" }
motu = { path = "../libs/motu" }
oxfw = { path = "../libs/oxfw" }
bebob = { path = "../libs/bebob" }

[[bin]]
name = "snd-firewire-digi00x-ctl-service"
path = "src/bin/snd-firewire-digi00x-ctl-service.rs"

[[bin]]
name = "snd-firewire-tascam-ctl-service"
path = "src/bin/snd-firewire-tascam-ctl-service.rs"

[[bin]]
name = "snd-fireworks-ctl-service"
path = "src/bin/snd-fireworks-ctl-service.rs"

[[bin]]
name = "snd-firewire-motu-ctl-service"
path = "src/bin/snd-firewire-motu-ctl-service.rs"

[[bin]]
name = "snd-oxfw-ctl-service"
path = "src/bin/snd-oxfw-ctl-service.rs"

[[bin]]
name = "snd-bebob-ctl-service"
path = "src/bin/snd-bebob-ctl-service.rs"
