[package]
name = "snd-firewire-ctl-services"
version = "0.1.0"
authors = ["Takashi Sakamoto <o-takashi@sakamocchi.jp>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = """
Service programs to control audio and music unit on IEEE 1394 bus, supported by ALSA
"""

[dependencies]
libc = "0.2"
glib = "0.10"
alsactl = { git = "https://github.com/alsa-project/alsa-gobject-rs.git", tag = "v0.2.0", version = "0.2" }
alsaseq = { git = "https://github.com/alsa-project/alsa-gobject-rs.git", tag = "v0.2.0", version = "0.2" }
hinawa = { git = "https://github.com/alsa-project/hinawa-rs.git", tag = "v0.3.0", version = "0.3" }
core = { path = "../libs/core" }
dg00x = { path = "../libs/dg00x" }
tascam = { path = "../libs/tascam" }
efw = { path = "../libs/efw" }
motu = { path = "../libs/motu" }
oxfw = { path = "../libs/oxfw" }
bebob = { path = "../libs/bebob" }
dice-runtime = { path = "../libs/dice/runtime" }
