[package]
name = "alsa-ctl-tlv-codec"
version = "0.0.1"
authors = ["Takashi Sakamoto <o-takashi@sakamocchi.jp>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://github.com/alsa-project/snd-firewire-ctl-services"
description = """
Encoder and Decoder for data of Type-Length-Value(TLV) style in ALSA control
interface
"""

[[bin]]
name = "tlv-decode"
doc = false

[[bin]]
name = "db-calculate"
doc = false
