[package]
edition = "2018"
name = "alsa-ctl-tlv-codec"
version = "0.1.1"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["data-structures", "encoding", "parser-implementations"]
description = """
Encoder and Decoder for Type-Length-Value(TLV) style data in ALSA control
interface
"""
documentation = "https://docs.rs/alsa-ctl-tlv-codec/"
keywords = ["alsa", "tlv", "encoder", "decoder"]
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
license = "MIT"
readme = "README.md"
repository = "https://github.com/alsa-project/snd-firewire-ctl-services"

[[bin]]
name = "tlv-decode"
doc = false

[[bin]]
name = "db-calculate"
doc = false
