[package]
edition = "2018"
name = "core"
version = "0.1.0"
# For publishing.
authors = ["Takashi Sakamoto"]
description = """
Core utilities to produce service programs for ALSA control and sequencer applications
"""
license = "GPL-3.0-or-later"
publish = false

[dependencies]
nix = "0.17"
glib = "0.10"
hinawa = "0.5"
hitaki = { git = "https://github.com/alsa-project/hitaki-rs.git", tag = "v0.1.0", version = "0.1" }
alsactl = { git = "https://github.com/alsa-project/alsa-gobject-rs.git", tag = "v0.3.0", version = "0.3" }
alsaseq = { git = "https://github.com/alsa-project/alsa-gobject-rs.git", tag = "v0.3.0", version = "0.3" }
