[package]
name = "ieee1212-config-rom"
version = "0.1.0"
authors = ["Takashi Sakamoto <o-takashi@sakamocchi.jp>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://github.com/alsa-project/snd-firewire-ctl-services"
description = """
Utilities for Configration ROM specification in IEEE 1222
"""

[[bin]]
name = "config-rom-parser"
doc = false
