[package]
name = "oxfw"
version = "0.1.0"
authors = ["Takashi Sakamoto <o-takashi@sakamocchi.jp>"]
edition = "2018"
license = "GPL-3.0-or-later"
publish = false
description = """
Implementation of protocol for Oxford Semiconductor FW970/971 chipset and vendor-specific models
"""

[dependencies]
libc = "0.2"
nix = "0.17"
glib = "0.10"
hinawa = { git = "https://github.com/alsa-project/hinawa-rs.git", tag = "v0.3.0", version = "0.3" }
alsactl = { git = "https://github.com/alsa-project/alsa-gobject-rs.git", tag = "v0.2.0", version = "0.2" }
core = { path = "../core" }
ta1394 = { path = "../ta1394" }
