[package]
name = "ta1394"
version = "0.1.0"
authors = ["Takashi Sakamoto <o-takashi@sakamocchi.jp>"]
edition = "2018"
license = "GPL-3.0-or-later"
publish = false
description = """
Implementations of some AV/C commands defined by 1394 Trading Association
"""

[dependencies]
libc = "0.2"
glib = "0.10"
hinawa = { git = "https://github.com/alsa-project/hinawa-rs.git", tag = "v0.3.0", version = "0.3" }
ieee1212-config-rom = { path = "../ieee1212-config-rom" }
