[package]
edition = "2018"
name = "ta1394"
version = "0.1.0"
# For publishing.
authors = ["Takashi Sakamoto"]
description = """
Implementations of some AV/C commands defined by 1394 Trading Association
"""
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
license = "GPL-3.0-or-later"
repository = "https://github.com/alsa-project/snd-firewire-ctl-services"

[dependencies]
ta1394-avc-general = "0.1"
