[package]
edition = "2018"
name = "firewire-bebob-protocols"
version = "0.2.0"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["hardware-support", "multimedia"]
description = """
Implementation of protocols defined by BridgeCo. AG and application vendors for DM1000, DM1100, and
DM1500 ASICs with its BridgeCo. Enhanced Break Out Box (BeBoB) solution.
"""
documentation = "https://docs.rs/firewire-bebob-protocols"
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["alsa", "ieee1394", "firewire", "protocol"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/alsa-project/snd-firewire-ctl-services"
[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
glib = "0.19"
hinawa = "0.11"
ta1394-avc-general = "0.2"
ta1394-avc-audio = "0.2"
ta1394-avc-stream-format = "0.2"
ta1394-avc-ccm = "0.2"
rand = "0.8"

[[bin]]
name = "bco-bootloader-info"
doc = false
