[package]
edition = "2018"
name = "firewire-dice-protocols"
version = "0.3.1"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["hardware-support", "multimedia"]
description = """
Implementation of protocols defined by TC Applied Technologies for ASICs of
Digital Interface Communication Engine (DICE) as well as hardware vendors.
"""
documentation = "https://docs.rs/firewire-dice-protocols"
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["alsa", "ieee1394", "firewire", "protocol"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/alsa-project/snd-firewire-ctl-services"
[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
glib = "0.20"
hinawa = "0.12"
ieee1212-config-rom = "0.1"
ta1394-avc-general = "0.2"

[[bin]]
name = "tcat-general-parser"
doc = false

[[bin]]
name = "tcat-extension-parser"
doc = false

[[bin]]
name = "tcat-config-rom-parser"
doc = false
