[package]
edition = "2018"
name = "firewire-digi00x-protocols"
version = "0.2.0"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["hardware-support", "multimedia"]
description = """
Implementation of protocol for Digi 00x family
"""
documentation = "https://docs.rs/firewire-digi00x-protocols"
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["alsa", "ieee1394", "firewire", "protocol"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/alsa-project/snd-firewire-ctl-services"
[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
glib = "0.15"
hinawa = "0.9"

[features]
# To suppress discovering C library when generating documentation in docs.rs.
dox = ["glib/dox", "hinawa/dox"]
