[package]
edition = "2018"
name = "firewire-fireface-protocols"
version = "0.2.0"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["hardware-support", "multimedia"]
description = """
Implementation of protocols defined by RME GmbH for its Fireface series.
"""
documentation = "https://docs.rs/firewire-fireface-protocols"
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["alsa", "ieee1394", "firewire", "protocol"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/alsa-project/snd-firewire-ctl-services"
[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
glib = "0.19"
hinawa = "0.11"
ieee1212-config-rom = "0.1"

[[bin]]
name = "ff-config-rom-parser"
doc = false
