[package]
edition = "2018"
name = "firewire-fireworks-protocols"
version = "0.2.0"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["hardware-support", "multimedia"]
description = """
Implementation of protocols defined by Echo Digital Audio Corporation for Fireworks board module.
"""
documentation = "https://docs.rs/firewire-fireworks-protocols"
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["alsa", "ieee1394", "firewire", "protocol"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/alsa-project/snd-firewire-ctl-services"
[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
glib = "0.20"
hinawa = "0.12"
hitaki = "0.6"
