[package]
edition = "2018"
name = "firewire-motu-protocols"
version = "0.3.0"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["hardware-support", "multimedia"]
description = """
Implementation of protocols defined by Mark of the Unicorn for its FireWire series.
"""
documentation = "https://docs.rs/firewire-motu-protocols"
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["alsa", "ieee1394", "firewire", "protocol"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/alsa-project/snd-firewire-ctl-services"
[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
glib = "0.15"
hinawa = "0.7"
hitaki = "0.3"
ieee1212-config-rom = "0.1"

[features]
# To suppress discovering C library when generating documentation in docs.rs.
dox = ["glib/dox", "hinawa/dox", "hitaki/dox"]
