[package]
edition = "2018"
name = "firewire-oxfw-protocols"
version = "0.2.0"
# For publishing.
authors = ["Takashi Sakamoto"]
categories = ["hardware-support", "multimedia"]
description = """
Implementation of protocol for Oxford Semiconductor FW970/971 ASICs and vendor-specific models
"""
documentation = "https://docs.rs/firewire-oxfw-protocols"
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
keywords = ["alsa", "ieee1394", "firewire", "protocol"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/alsa-project/snd-firewire-ctl-services"
[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
glib = "0.20"
hinawa = "0.12"
ta1394-avc-general = "0.2"
ta1394-avc-audio = "0.2"
ta1394-avc-ccm = "0.2"
ta1394-avc-stream-format = "0.2"

[[bin]]
name = "oxfw-info"
doc = false
