[package]
edition = "2018"
name = "runtime-core"
version = "0.1.0"
# For publishing.
authors = ["Takashi Sakamoto"]
description = """
Core utilities to produce service programs for ALSA control and sequencer applications
"""
license = "GPL-3.0-or-later"
publish = false

[dependencies]
libc = "0.2"
nix = { version = ">=0.24", features = ["signal"] }
glib = "0.18"
hinawa = "0.10"
hitaki = "0.4"
alsactl = "0.5"
alsaseq = "0.5"
clap = { version = "3.2", features = ["derive"] }
tracing = "0.1"
