[package]
edition = "2018"
name = "runtime-core"
version = "0.1.0"
# For publishing.
authors = ["Takashi Sakamoto"]
description = """
Core utilities to produce service programs for ALSA control and sequencer applications
"""
license = "GPL-3.0-or-later"
publish = false

[dependencies]
libc = "0.2"
nix = { version = ">=0.24", features = ["signal"] }
glib = "0.20"
hinawa = "0.12"
hitaki = "0.6"
alsactl = "0.7"
alsaseq = "0.7"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
