[package]
edition = "2018"
name = "snd-dice-ctl-service"
version = "0.1.0"
# For publishing.
authors = ["Takashi Sakamoto"]
description = """
Runtime implementation to control audio and music unit in IEEE 1394 bus which ALSA dice driver
(snd-dice) supports.
"""
license = "GPL-3.0-or-later"
publish = false

[dependencies]
glib = "0.15"
nix = "0"
alsactl = "0.4"
hinawa = "0.7"
hitaki = "0.3"
alsa-ctl-tlv-codec = "0.1"
ieee1212-config-rom = "0.1"
firewire-dice-protocols = "0.1"
clap = { version = "3.2", features = ["derive"] }
core = { path = "../core" }
tracing = "0.1"
tracing-subscriber = "0.3"
