[package]
edition = "2018"
name = "snd-fireface-ctl-service"
version = "0.1.0"
# For publishing.
authors = ["Takashi Sakamoto"]
description = """
Runtime implementation to control audio and music unit in IEEE 1394 bus which ALSA fireface driver
(snd-fireface) supports.
"""
license = "GPL-3.0-or-later"
publish = false

[dependencies]
glib = "0.19"
nix = { version = ">=0.24", features = ["signal"] }
hinawa = "0.11"
hitaki = "0.5"
alsactl = "0.6"
alsa-ctl-tlv-codec = "0.1"
ieee1212-config-rom = "0.1"
firewire-fireface-protocols = "0.2"
clap = { version = "3.2", features = ["derive"] }
runtime-core = { path = "../core" }
tracing = "0.1"
tracing-subscriber = "0.3"
