[package]
edition = "2018"
name = "motu-runtime"
version = "0.1.0"
# For publishing.
authors = ["Takashi Sakamoto"]
description = """
Implementation of service runtime for models based on ASICs of DICE.
"""
license = "GPL-3.0-or-later"
publish = false

[dependencies]
nix = "0"
glib = "0.15"
hinawa = "0.7"
hitaki = "0.3"
alsactl = "0.4"
alsa-ctl-tlv-codec = "0.1"
ieee1212-config-rom = "0.1"
firewire-motu-protocols = "0.1"
clap = { version = "3.2", features = ["derive"] }
core = { path = "../core" }
tracing = "0.1"
tracing-subscriber = "0.3"
