[package]
edition = "2018"
name = "snd-firewire-motu-ctl-service"
version = "0.1.0"
# For publishing.
authors = ["Takashi Sakamoto"]
description = """
Runtime implementation to control audio and music unit in IEEE 1394 bus which ALSA firewire-motu
(snd-firewire-motu) supports.
"""
license = "GPL-3.0-or-later"
publish = false

[dependencies]
nix = { version = ">=0.24", features = ["signal"] }
glib = "0.19"
hinawa = "0.11"
hitaki = "0.5"
alsactl = "0.6"
alsa-ctl-tlv-codec = "0.1"
ieee1212-config-rom = "0.1"
firewire-motu-protocols = "0.3"
clap = { version = "4.5", features = ["derive"] }
runtime-core = { path = "../core" }
tracing = "0.1"
tracing-subscriber = "0.3"
