[package]
edition = "2018"
name = "snd-oxfw-ctl-service"
version = "0.1.0"
# For publishing.
authors = ["Takashi Sakamoto"]
description = """
Runtime implementation to control audio and music unit in IEEE 1394 bus which ALSA oxfw driver
(snd-oxfw) supports.
"""
license = "GPL-3.0-or-later"
publish = false

[dependencies]
nix = { version = ">=0.24", features = ["signal"] }
glib = "0.15"
hinawa = "0.9"
hitaki = "0.3"
alsactl = "0.4"
ieee1212-config-rom = "0.1"
ta1394-avc-general = "0.2"
ta1394-avc-stream-format = "0.2"
firewire-oxfw-protocols = "0.2"
clap = { version = "3.2", features = ["derive"] }
runtime-core = { path = "../core" }
tracing = "0.1"
tracing-subscriber = "0.3"
