[package]
edition = "2018"
name = "tascam-runtime"
version = "0.1.0"
# For publishing.
authors = ["Takashi Sakamoto"]
description = """
Implementaion of service runtime for models of Tascam FireWire series
"""
license = "GPL-3.0-or-later"
publish = false

[dependencies]
nix = "0"
glib = "0.15"
hinawa = "0.7"
hitaki = "0.2"
alsactl = "0.4"
alsaseq = "0.4"
ieee1212-config-rom = "0.1"
alsa-ctl-tlv-codec = "0.1"
firewire-tascam-protocols = "0.1"
clap = { version = "3.2", features = ["derive"] }
core = { path = "../core" }
