[package]
edition = "2018"
name = "snd-firewire-tascam-ctl-service"
version = "0.1.0"
# For publishing.
authors = ["Takashi Sakamoto"]
description = """
Runtime implementation to control audio and music unit in IEEE 1394 bus which ALSA firewire-tascam
(snd-firewire-tascam) supports as well as FE-8.
"""
license = "GPL-3.0-or-later"
publish = false

[dependencies]
nix = { version = ">=0.24", features = ["signal"] }
glib = "0.20"
hinawa = "0.12"
hitaki = "0.6"
alsactl = "0.7"
alsaseq = "0.7"
ieee1212-config-rom = "0.1"
alsa-ctl-tlv-codec = "0.1"
firewire-tascam-protocols = "0.2"
clap = { version = "4.5", features = ["derive"] }
runtime-core = { path = "../core" }
tracing = "0.1"
tracing-subscriber = "0.3"
