[package]
name = "bebob-protocols"
version = "0.1.0"
authors = ["Takashi Sakamoto <o-takashi@sakamocchi.jp>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = """
Implementation of protocols defined by BridgeCo. AG and application vendors for DM1000, DM1100, and
DM1500 ASICs with its BridgeCo. Enhanced Break Out Box (BeBoB) solution.
"""

[dependencies]
glib = "0.10"
hinawa = { git = "https://github.com/alsa-project/hinawa-rs.git", tag = "v0.5.2", version = "0.5" }
ta1394 = { path = "../../ta1394" }
