[package]
edition = "2018"
name = "firewire-bebob-protocols"
version = "0.1.0"
# For publishing.
authors = ["Takashi Sakamoto"]
description = """
Implementation of protocols defined by BridgeCo. AG and application vendors for DM1000, DM1100, and
DM1500 ASICs with its BridgeCo. Enhanced Break Out Box (BeBoB) solution.
"""
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
license = "LGPL-3.0-or-later"
repository = "https://github.com/alsa-project/snd-firewire-ctl-services"

[dependencies]
glib = "0.15"
hinawa = "0.7"
ta1394-avc-general = "0.1"
ta1394-avc-audio = "0.1"
ta1394-avc-stream-format = "0.1"
ta1394-avc-ccm = "0.1"

[[bin]]
name = "bco-bootloader-info"
doc = false
