[package]
edition = "2018"
name = "bebob-runtime"
version = "0.1.0"
# For publishing.
authors = ["Takashi Sakamoto"]
description = """
Implementation of protocol for ASIC in BridgeCo Enhanced Break Out Box and vendor-specific models
"""
license = "GPL-3.0-or-later"
publish = false

[dependencies]
nix = "0.17"
glib = "0.10"
hinawa = "0.5"
hitaki = { git = "https://github.com/alsa-project/hitaki-rs.git", tag = "v0.1.0", version = "0.1" }
alsactl = { git = "https://github.com/alsa-project/alsa-gobject-rs.git", tag = "v0.3.0", version = "0.3" }
alsa-ctl-tlv-codec = { path = "../../alsa-ctl-tlv-codec" }
ieee1212-config-rom = { path = "../../ieee1212-config-rom" }
ta1394 = { path = "../../ta1394" }
bebob-protocols = { path = "../protocols" }
core = { path = "../../core" }
