[package]
edition = "2018"
name = "bebob-runtime"
version = "0.1.0"
# For publishing.
authors = ["Takashi Sakamoto"]
description = """
Implementation of protocol for ASIC in BridgeCo Enhanced Break Out Box and vendor-specific models
"""
license = "GPL-3.0-or-later"
publish = false

[dependencies]
nix = "0.17"
glib = "0.15"
hinawa = "0.7"
hitaki = "0.2"
alsactl = "0.4"
alsa-ctl-tlv-codec = "0.1"
ieee1212-config-rom = "0.1"
ta1394-avc-general = "0.1"
bebob-protocols = "0.1"
core = { path = "../../core" }
