[package]
edition = "2018"
name = "dg00x-protocols"
version = "0.1.0"
# For publishing.
authors = ["Takashi Sakamoto"]
description = """
Implementation of protocol for Digi 00x family
"""
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
license = "GPL-3.0-or-later"
repository = "https://github.com/alsa-project/snd-firewire-ctl-services"

[dependencies]
glib = "0.10"
hinawa = { git = "https://github.com/alsa-project/hinawa-rs.git", tag = "v0.5.2", version = "0.5" }
