[package]
edition = "2018"
name = "firewire-digi00x-protocols"
version = "0.1.0"
# For publishing.
authors = ["Takashi Sakamoto"]
description = """
Implementation of protocol for Digi 00x family
"""
homepage = "https://alsa-project.github.io/gobject-introspection-docs/"
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/alsa-project/snd-firewire-ctl-services"

[dependencies]
glib = "0.15"
hinawa = "0.7"
